--- a/style/ancient.css
+++ b/style/ancient.css
@@ -19,18 +19,18 @@ main{
             h1{
                 text-align: center;
                 font-family: Almendra SC;
-                font-size: 85px;
+                font-size: 85px !important;
 
             }
             h2{
             	 text-align: center;
                 font-family: Almendra Display;
-                font-size: 60px;
+                font-size: 60px !important;
             }
             h3{
             	text-align: center;
                 font-family: Almendra;
-                font-size: 45px;
+                font-size: 45px !important;
                 margin-left: 5%;
             }
             header{
@@ -39,7 +39,7 @@ main{
             header p{
             	text-align: center;
                 font-family: Almendra;
-                font-size: 40px;
+                font-size: 40px !important;
                 font-weight: bold;
       }
 main{
