--- a/style/1950style.css
+++ b/style/1950style.css
@@ -420,8 +420,9 @@ footer {
 
 @media only screen  and (min-width : 1224px) { /* this rule will be applied to desktop screen */
   header:before {
-  margin-top: 3%;
-  margin-bottom: -9%;  }
+  margin-top: 13%;
+  margin-bottom: 9%; 
+  }
 
   figure:after {
     margin-bottom: -2%;
@@ -429,7 +430,7 @@ footer {
 
   h1:after {
     margin-top: -10%;
-    margin-bottom: -13%;
+    margin-bottom: -10%;
   }
 
   h2:after {
