--- a/style/slide.css
+++ b/style/slide.css
@@ -1,5 +1,6 @@
 body{
                 color: black;
+                background-image: url('../images/back.jpeg')
             }
             p{
                 display: none
