--- a/site_documentation/disclaimer.css
+++ b/site_documentation/disclaimer.css
@@ -1,5 +1,9 @@
 @import url("demo.css");
 
+.doctitle p {
+	color:white;
+}
+
 .demo-1 body {
 	background: #f0f0f0 url(../images/cream_dust.jpg);
 }
