--- a/style/ancient.css
+++ b/style/ancient.css
@@ -10,7 +10,7 @@
                 border-image-repeat: repeat;
                 margin-top: -125px;
                 margin-left: 5%;
-                background-image: url('../../images/old_paper.jpg')!important;
+                background-image: url('../../images/oldP.jpg')!important;
 	  	  background-position: center !important;
   background-repeat: no-repeat !important;
   background-size: cover !important;
