--- a/style/ancient.css
+++ b/style/ancient.css
@@ -4,14 +4,13 @@
 
 
   body{
-
-                border: 125px solid transparent;
+		border: 125px solid transparent;
+                border-image-source: url(../images/left_border.png);
                 border-image-slice: 0 0 0 200; 
                 border-image-repeat: repeat;
                 margin-top: -125px;
                 margin-left: 5%;
-                background-image: url('../../images/oldP.jpg')!important;
-
+                background-color: #E7D1A2 !important;
             }
 main{
 	margin-left: 5%;
