--- a/style/slide.css
+++ b/style/slide.css
@@ -1,6 +1,6 @@
 body{
                 color: black;
-                background-image: url('../images/back.jpeg')
+                background-image: url('../images/back.jpeg') !important;
             }
             p{
                 display: none
