--- a/style/css_fine_novecento_finale.css
+++ b/style/css_fine_novecento_finale.css
@@ -32,7 +32,7 @@ header p {
 }
 
 body {
- |background-image: url("sfondoufficiale.jpg");
+ /*background-image: url("sfondoufficiale.jpg");*/
  background-size: auto;
  margin: 2;
  
@@ -188,7 +188,7 @@ padding-right: 3em;
 	border-style: solid;
 	border-color: black;
 	border-width: 0.15em;
- transform: scale(0.99);
+/* transform: scale(0.99);*/
 
 
 	}
@@ -406,7 +406,7 @@ padding-right: 3em;
 	border-style: solid;
 	border-color: black;
 	border-width: 0.15em;
- transform: scale(0.99);
+/* transform: scale(0.99);*/
 
 
 	}
@@ -615,7 +615,7 @@ padding-right: 3em;
 	border-style: solid;
 	border-color: black;
 	border-width: 0.15em;
- transform: scale(0.99);
+ /*transform: scale(0.99);*/
 
 
 	}
@@ -815,15 +815,15 @@ color: purple;}
 	height:  800px;
 	}
 	
-	
+	/* COLUMN 1000px*/
 	main {
-	 	 	 	column-count: 3;
+	 	 /*	 	column-count: 3;
 	column-gap: 0.3em ;
 	column-rule-style: solid;
 	column-rule-width: 1em;
 	column-rule-color: black;
 	column-rule: 1px solid black;}
-	
+	*/
 	body {	/*magazine style rule*/
 	margin-top: 3em;
 	margin-right: 1.5em;
@@ -834,7 +834,7 @@ padding-right: 3em;
 	border-style: solid;
 	border-color: black;
 	border-width: 0.15em;
- transform: scale(0.99);
+/* transform: scale(0.99);*/
 
 
 	}
