--- a/style/css_fine_novecento_finale.css
+++ b/style/css_fine_novecento_finale.css
@@ -170,14 +170,14 @@ font-size:0.9em;}
 	header   {
 		height: 500px;
 	}
-	main {
+	main {/*
 	 	 	 	column-count: 1;
 	column-gap: 0.3em ;
 	column-rule-style: solid;
 	column-rule-width: 1em;
 	column-rule-color: black;
 	column-rule: 1px solid black;}
-	
+	*/
 	body {	/*magazine style rule*/
 	margin-top: 3em;
 	margin-right: 1.5em;
