--- a/style/css_fine_novecento_finale.css
+++ b/style/css_fine_novecento_finale.css
@@ -810,20 +810,20 @@ color: purple;}
 /* Schermo più grande */
 @media (min-width: 1000px) {
 	
-	header
+/*	header
 	{
 	height:  800px;
 	}
-	
+*/	
 	/* COLUMN 1000px*/
 	main {
-	 	 /*	 	column-count: 3;
+	 	 	 	column-count: 3;
 	column-gap: 0.3em ;
 	column-rule-style: solid;
 	column-rule-width: 1em;
 	column-rule-color: black;
 	column-rule: 1px solid black;}
-	*/
+	
 	body {	/*magazine style rule*/
 	margin-top: 3em;
 	margin-right: 1.5em;
