--- a/style/css_primo_novecento_finale.css
+++ b/style/css_primo_novecento_finale.css
@@ -30,13 +30,9 @@ header p {
 	border-top-width: 0em;
 }
 
-header figure {
+header img {
 	
- display: inline;
- width: 10%;
- float: left;
- height: auto;
- margin-right: 2em;
+
      filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><fecolormatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'></fecolormatrix></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
     filter: gray; /* IE6-9 */
     -webkit-filter: grayscale(100%);
