--- a/style/1950style.css
+++ b/style/1950style.css
@@ -15,7 +15,7 @@ p {
  }
 
 body {
-  background-image: url("../images/colorpalette.jpg");
+  background-image: url("colorpalette.jpg");
   background-size: contain;
     margin-right: 5%;
   margin-left: 5%;
@@ -38,7 +38,7 @@ main {
 
 header
 {
-  margin-top: -50;
+  margin-top: 4%;
   text-align: center;
 }
 
@@ -49,10 +49,10 @@ header::after {
   width: 100%;
   height: 50%;
   background-repeat: no-repeat;
-  background-image: url(../images/yellow.png);
+  background-image: url(yellow.png);
   background-position: center;
-  margin-top: -130px;
-  margin-bottom: -150px;
+  margin-top: -13%;
+  margin-bottom: -7%;
 }
 
 
@@ -126,10 +126,10 @@ h1::before {
   width: auto;
   height: 50%;
   background-repeat: no-repeat;
-  background-image: url(../images/orange.png);
+  background-image: url(orange.png);
   background-position: center;
-  margin-top: -130px;
-  margin-bottom: -150px;
+  margin-top: -10%;
+  margin-bottom: -10%;
 }
 
 h1::after {
@@ -138,10 +138,10 @@ h1::after {
   width: auto;
   height: 50%;
   background-repeat: no-repeat;
-  background-image: url(../images/orange.png);
+  background-image: url(orange.png);
   background-position: center;
-  margin-top: -130px;
-  margin-bottom: -150px;
+  margin-top: -10%;
+  margin-bottom: -10%;
 }
 
 h4 {
@@ -168,18 +168,17 @@ img {
    display:block; 
    height: auto;   
    margin: 0 auto;
-   border-radius: 20px;
    border-radius: 50%
   }
 
 
 figure::before {
   content: "";
-  padding: 20;
+  padding: 5%;
   display: block;
   width: 100%;
   height: 5%;
-  background-image: url(../images/yellowresized2.png);
+  background-image: url(yellowresized2.png);
   background-repeat: no-repeat;
   background-position: center;
 
@@ -188,11 +187,11 @@ figure::before {
 
 figure::after {
   content: "";
-  padding: 20;
+  padding: 5%;
   display: block;
   width: 100%;
   height: 5%;
-  background-image: url(../images/orangeresized.png);
+  background-image: url(orangeresized.png);
   background-repeat: no-repeat;
   background-position: center;
 }
