--- a/style/css_fine_novecento_finale.css
+++ b/style/css_fine_novecento_finale.css
@@ -22,6 +22,10 @@ spazi ampi nella pagina, margini e bordi
 	background-color: white;
 }
 
+main figure {
+	max-height: 1400px;
+}
+
 
 header p {
 	margin-top: 0em;
