--- a/style/1950style.css
+++ b/style/1950style.css
@@ -73,9 +73,11 @@ h1 {
     -webkit-text-stroke-width: 2.2px;
     -webkit-text-stroke-color: black;
     border-radius: 25%
-
 }
 
+figure {
+  margin-top: -7%;
+}
 
 
 h2 {
