--- a/style/css_fine_novecento_finale.css
+++ b/style/css_fine_novecento_finale.css
@@ -22,8 +22,12 @@ spazi ampi nella pagina, margini e bordi
 	background-color: white;
 }
 
+header figure {
+	max-width: 500px;
+	max-height: 400px;
+}
 body figure {
-	max-height: 1400px;
+	max-width: 400px;
 }
 
 
