--- a/style/ancient.css
+++ b/style/ancient.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css?family=Almendra&display=swap');
 
 
-  body @media (max-width: 900px) {{
+   @media (max-width: 900px) { body{
 		border: 125px solid transparent;
                 border-image-source: url(../images/left_border.png);
                 border-image-slice: 0 0 0 200; 
@@ -71,7 +71,7 @@ main p{
 
 }
 }
-
-body @media (max-width: 900px) {
+@media (max-width: 900px) { body{
 	background-color: black;
+}
 }
