--- a/style/ancient.css
+++ b/style/ancient.css
@@ -2,9 +2,8 @@
 @import url('https://fonts.googleapis.com/css?family=Almendra Display&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Almendra&display=swap');
 
-
-   @media (max-width: 900px) { body{
-		border: 125px solid transparent;
+ @media only screen and (max-width: 600px) { body{
+	        border: 125px solid transparent;
                 border-image-source: url(../images/left_border.png);
                 border-image-slice: 0 0 0 200; 
                 border-image-repeat: repeat;
