--- a/style/ancient.css
+++ b/style/ancient.css
@@ -70,7 +70,7 @@ main p{
 
 }
 }
-@media (max-width: 1000px) { body{
+@media only screen and (max-width: 1000px){ body{
 	background-color: black;
 }
 }
