--- a/style/ancient.css
+++ b/style/ancient.css
@@ -70,7 +70,10 @@ main p{
 
 }
 }
-@media only screen and (max-width: 200px){ body{
-	background-color: black;
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: lightblue;
+  }
 }
+
 }
