--- a/style/slide.css
+++ b/style/slide.css
@@ -1,7 +1,8 @@
 body{
                 color: black;
                 background-image: url('../images/backFut.jpg') !important;
-            }
+            
+}
             p{
                 display: none
             }
@@ -13,6 +14,9 @@ body{
             }
             h4{
                 display: none;
+            }
+            body{
+                background-image: url()
             }
             q{
                 display: none;
@@ -27,17 +31,11 @@ body{
                 height: 100%;
             }
             #vid{
-                background-color: red;
-                margin-top: 3%;
-                width: 100%;
-                height: 100%;
                 color: black;
                 display: block;
                 width: 80%;
-                background-color: blue;
-                height: 450px;
-                width: 900px;
                 margin-left: 15%;
+
             }
             #headerVd{
                 width: inherit;
@@ -47,13 +45,14 @@ body{
             #bodyvid{
                 padding: 3%;
                 width: inherit;
-                height: 450px;
+                height: 250px;
                 background-color: black;
                 color: #4CC3EB;
                 font-family: 'Dancing Script', cursive;
                 font-size: 17px;
                 line-height: 1.5;
                 text-align: center;
+
 
 
             }
@@ -78,5 +77,85 @@ body{
                 width: 50%;
                 height: 70%;
             }
+
+@media only screen and (max-width: 600px){
+#vid{
+    margin-top: 25%;
+	height: 400px;
+	width: 350px;
+	}
+#footerid{
+	height: 35px;
+   }
+#headerVd{
+	height: 35px;
+}
+.glyphicon{
+	font-size: 30px;
+}
+#bodyvid{
+	height:150px;
+}
+}
+@media only screen and (min-width: 601px) {
+#vid{
+	margin-top: 15%;
+	height: 400px;
+	width: 500px;
+	}
+#footerid{
+	height: 45px;
+   }
+#headerVd{
+	height: 45px;
+}
+.glyphicon{
+	font-size: 35px;
+}
+#bodyvid{
+	height:300px;
+}
+	}
+@media only screen and (min-width: 900px){
+#vid{
+	margin-top: 5%;
+	height: 400px;
+	width: 800px;
+	}
+#footerid{
+	height: 55px;
+   }
+#headerVd{
+	height: 55px;
+}
+.glyphicon{
+	font-size: 50px;
+}
+#bodyvid{
+	height:400px;
+}
+	}}
+@media only screen and (min-width: 1200px){body{
+				background-color: red;
+
+	}
+#vid{
+	margin-top: 3%;
+	height: 400px;
+	width: 900px;
+	}
+#footerid{
+	height: 60px;
+   }
+#headerVd{
+	height: 60px;
+}
+.glyphicon{
+	font-size: 55px;
+}
+#bodyvid{
+	height:400px;
+}}
+
 
 
