--- a/style/slide.css
+++ b/style/slide.css
@@ -49,7 +49,7 @@ body{
                 height: 250px;
                 background-color: black;
                 color: #4CC3EB;
-                font-family: 'Dancing Script', cursive;
+            	font-family: 'Press Start 2P', cursive;
                 font-size: 17px;
                 line-height: 1.5;
                 text-align: center;
