--- a/style/slide.css
+++ b/style/slide.css
@@ -141,10 +141,7 @@ body{
 
 }
 	}}
-@media only screen and (min-width: 1200px){body{
-				background-color: red;
-
-	}
+@media only screen and (min-width: 1200px){
 #vid{
 	margin-top: 1%;
 	height: 400px;
