--- a/style/slide.css
+++ b/style/slide.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap')
+@import url('https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap');
+
 body{
-                color: black;
                 background-image: url('../images/back.jpg') !important;
             	font-family: 'Press Start 2P', cursive;
 }
@@ -20,7 +20,7 @@ body{
                 display: none;
             }
             #btn1{
-                height: 100%
+                height: 100%;
                 background-color: gray;
             }
             #TableA{
@@ -140,7 +140,7 @@ body{
 	font-size: 17px;
 
 }
-	}}
+	}
 @media only screen and (min-width: 1200px){
 #vid{
 	margin-top: 1%;
