--- a/style/ancient.css
+++ b/style/ancient.css
@@ -66,11 +66,11 @@ main p{
 @media only screen and (max-width: 600px){
         header{
             width: 600px;
-            margin-left: -100px;
+            margin-left: 100px;
         }
         main{
             width: 600px;
-            margin-left: -100px;
+            margin-left: 100px;
         }
         img{
             width: 350px !important;
@@ -84,11 +84,11 @@ main p{
   @media only screen and (min-width: 601px){
         header{
             width: 800px;
-            margin-left: -100px;
+            margin-left: 100px;
         }
         main{
             width: 800px;
-            margin-left: -100px;
+            margin-left: 100px;
         }
         img{
             width: 600px !important;
@@ -102,12 +102,14 @@ main p{
   @media only screen and (min-width: 900px){
             header{
             width: 1000px;
-            margin-left: -200px;
+            margin-left: 200px;
         }
         main{
             width: 900px;
-            margin-left: -200px;
+            margin-left: 200px;
         }
+	body{
+	  height: 1000px}
         img{
             width: 600px !important;
             margin-left: 120px !important;
@@ -121,18 +123,18 @@ main p{
     @media only screen and (min-width: 1000px){
         header{
             width: 1000px;
-            margin-left: 100px;
+            margin-left: 200px;
         }
         main{
             width: 1000px;
-            margin-left: 100px;
+            margin-left: 200px;
         }
         p {
             margin-top: 80px;
         }
         img{
             width: 700px !important;
-            margin-left: 120px !important;
+            margin-left: 220px !important;
         }
         figcaption{
                     font-size: 17px;
