--- a/style/ancient.css
+++ b/style/ancient.css
@@ -72,6 +72,9 @@ main p{
             width: 600px;
             margin-left: 100px;
         }
+	main p{
+	 margin-top: 120px;
+	}
         img{
             width: 350px !important;
             margin-left: 120px !important;
