--- a/style/ancient.css
+++ b/style/ancient.css
@@ -3,10 +3,10 @@
 @import url('https://fonts.googleapis.com/css?family=Almendra&display=swap');
 
 body{
-	        border: 125px solid transparent;
-                border-image-source: url(../images/left_border.png);
-                border-image-slice: 0 0 0 200; 
-                border-image-repeat: repeat;
+	        border: 125px solid transparent !important;
+                border-image-source: url(../images/left_border.png) !important;
+                border-image-slice: 0 0 0 200 !important; 
+                border-image-repeat: repeat !important;
                 background-color: #E7D1A2 !important;
           
 }
