--- a/style/ancient.css
+++ b/style/ancient.css
@@ -141,6 +141,7 @@ main p{
         main{
             width: 1000px;
             margin-left: 200px;
+	    height: 1000px;
         }
         p {
             margin-top: 80px;
