--- a/style/ancient.css
+++ b/style/ancient.css
@@ -4,7 +4,7 @@
 
 body{
 	        border: 125px solid transparent !important;
-                border-image-source: url(../images/left_border.png) !important;
+                border-image-source: url('../images/left_border.png') !important;
                 border-image-slice: 0 0 0 200 !important; 
                 border-image-repeat: repeat !important;
                 background-color: #E7D1A2 !important;
@@ -141,14 +141,13 @@ main p{
         main{
             width: 1000px;
             margin-left: 100px;
-	    height: 700px;
         }
         p {
             margin-top: 80px;
         }
         img{
             width: 700px !important;
-            margin-left: 100px !important;
+            margin-left: 120px !important;
         }
         figcaption{
                     font-size: 17px;
