--- a/style/ancient.css
+++ b/style/ancient.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Almendra SC&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Almendra Display&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Almendra&display=swap');
+ @import url('https://fonts.googleapis.com/css?family=UnifrakturMaguntia&display=swap');
 
 body{
 	        border: 125px solid transparent !important;
@@ -70,6 +71,12 @@ main p{
 
 
 }
+
+p::first-letter {
+  font-size: 4rem;
+    font-family: 'UnifrakturMaguntia', cursive;
+}
+
 @media only screen and (max-width: 600px){
         header{
             width: 600px;
