--- a/style/ancient.css
+++ b/style/ancient.css
@@ -1,48 +1,50 @@
 @import url('https://fonts.googleapis.com/css?family=Almendra SC&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Almendra Display&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Almendra&display=swap');
- @import url('https://fonts.googleapis.com/css?family=UnifrakturMaguntia&display=swap');
 
-body{
-	        border: 125px solid transparent !important;
-                border-image-source: url('../images/left_border.png') !important;
-                border-image-slice: 0 0 0 200 !important; 
-                border-image-repeat: repeat !important;
+
+  body{
+                border: 125px solid transparent;
+                border-image-source: url('../images/left_border.png');
+                border-image-slice: 0 0 0 200; 
+                border-image-repeat: repeat;
                 background-color: #E7D1A2 !important;
-          
+                margin-left: 25px;
+            }
+        
+p::first-letter {
+  font-size: 6rem;
+    font-family: 'UnifrakturMaguntia', cursive;
 }
-
-
-            h1{
+  
+         h1{
                 text-align: center;
-                font-family: 'Almendra SC';
-                font-size: 85px !important;
+                font-family: Almendra SC;
+                font-size: 85px;
 
             }
             h2{
             	 text-align: center;
-                font-family: 'Almendra Display';
-                font-size: 60px !important;
+                font-family: Almendra Display;
+                font-size: 60px;
             }
             h3{
             	text-align: center;
                 font-family: Almendra;
-                font-size: 45px !important;
+                font-size: 45px;
                 margin-left: 5%;
             }
             h4{
-            	text-align: center;
+                text-align: center;
                 font-family: Almendra;
-                font-size: 45px !important;
+                font-size: 45px;
                 margin-left: 5%;
             }
-            header{
-            	height: 120%;
-            }
+
             header p{
             	text-align: center;
                 font-family: Almendra;
-                font-size: 40px !important;
+                font-size: 40px;
                 font-weight: bold;
       }
 main{
@@ -53,46 +55,35 @@ main{
 
 img{
 	-webkit-filter: grayscale(100%);
-	margin-left: 10%;
-
+    margin-top: 100px;
 }
 
-figure{
-	height: 75%;
-}
 
 
 main p{
-	border: 125px solid transparent;
-    border-image-source: url(../images/border.png);
+	border: 120px solid transparent;
+    padding-bottom: 50px;
+    margin-top: -100px;
+    border-image-source: url('../images/border.png');
 	border-image-slice: 0 0 200 0; 
 	border-image-repeat: repeat;
 	font-size: 30px;
-
-
 }
-
-p::first-letter {
-  font-size: 6rem;
-    font-family: 'UnifrakturMaguntia', cursive;
-}
-
 @media only screen and (max-width: 600px){
+        body{
+                margin-left: 25px;
+
+        }
         header{
-            width: 600px;
-            margin-left: 100px;
+            width: 300px;
+            margin-left:0px;
         }
-  body{
-	  height: 1000px}
         main{
-            width: 600px;
-            margin-left: 20px;
+            width: 500px;
+            margin-left: -100px;
         }
-	main p{
-	 margin-top: 120px;
-	}
         img{
-            width: 350px !important;
+            width: 250px !important;
             margin-left: 120px !important;
         }
         figcaption{
@@ -102,17 +93,16 @@ p::first-letter {
     }
   @media only screen and (min-width: 601px){
         header{
-            width: 800px;
-            margin-left: 200px;
+            width: 500px;
+            margin-left: -5px;
         }
-
         main{
-            width: 800px;
-            margin-left: 200px;
+            width: 500px;
+            margin-left: -5px;
         }
         img{
-            width: 600px !important;
-            margin-left: 220px !important;
+            width: 200px !important;
+            margin-left: 120px !important;
         }
         figcaption{
                     font-size: 12px;
@@ -121,33 +111,31 @@ p::first-letter {
     }
   @media only screen and (min-width: 900px){
             header{
-            width: 1000px;
-            margin-left: 200px;
+            width: 700px;
+            margin-left: -5px;
         }
         main{
-            width: 900px;
-            margin-left: 200px;
+            width: 700px;
+            margin-left: -5px;
         }
-	body{
-	  height: 1000px}
         img{
-            width: 600px !important;
+            width: 400px !important;
             margin-left: 120px !important;
         }
         figcaption{
-                    font-size: 14px;
-                    margin-left: 185px;
+                    font-size: 10px;
+                    margin-left: 150px;
                 }
 
     }
     @media only screen and (min-width: 1000px){
         header{
-            width: 1000px;
-            margin-left: 100px;
+            width: 1100px;
+            margin-left: 5px;
         }
         main{
-            width: 1000px;
-            margin-left: 100px;
+            width: 1200px;
+            margin-left: 5px;
         }
         p {
             margin-top: 80px;
@@ -164,5 +152,3 @@ p::first-letter {
                 }
 
     }
-
-
