--- a/style/slide.css
+++ b/style/slide.css
@@ -3,6 +3,8 @@
 body{
                 background-image: url('../images/back.jpg') !important;
             	font-family: 'Press Start 2P', cursive;
+		background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/demo-bg.jpg");
+
 }
             p{
                 display: none
