--- a/style/home.css
+++ b/style/home.css
@@ -179,7 +179,8 @@ header#container {
 #content{
   width: 100%;
   height: 90%;
-	
+  backgorund-image: url("tttproject.github.io/documentation/images/black_denim.jpg");
+  z-index: 3;	
 }
 
 ul{
