--- a/style/home.css
+++ b/style/home.css
@@ -2,7 +2,10 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display=swap');
 
-
+div #loading {
+	  backgorund-image: url("tttproject.github.io/documentation/images/black_denim.jpg");
+  z-index: 3;	
+}
 
 
 .open{
@@ -179,8 +182,7 @@ header#container {
 #content{
   width: 100%;
   height: 90%;
-  backgorund-image: url("tttproject.github.io/documentation/images/black_denim.jpg");
-  z-index: 3;	
+
 }
 
 ul{
