--- a/style/home.css
+++ b/style/home.css
@@ -3,8 +3,10 @@
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display=swap');
 
 div #loading {
-	  backgorund-image: url("tttproject.github.io/documentation/images/black_denim.jpg");
+	  background-image: url("tttproject.github.io/documentation/images/black_denim.jpg");
   z-index: 3;	
+ height: 100%;
+width:100%;
 }
 
 
